k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krona-frontend
  namespace: krona
  labels:
    app: krona-frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: krona-frontend
  template:
    metadata:
      labels:
        app: krona-frontend
    spec:
      containers:
        - name: krona-frontend
          image: ghcr.io/nulp-ai-enterprise/krona-frontend:sha-51174b8
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 6
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: ghcr-secret
