k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krona-frontend
  namespace: krona
spec:
  type: ClusterIP
  selector:
    app: krona-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
